--- a/src/LibOVR.Native/LibOVR.Native.vcxproj
+++ b/src/LibOVR.Native/LibOVR.Native.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A84A7C34-3BCE-40E9-A4ED-B8D583033D70}</ProjectGuid>
     <RootNamespace>LibOvrNative</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -39,14 +40,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Program Files\Oculus\ovr_sdk_win_32.0.0\LibOVR\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Include;$(IncludePath)</IncludePath>
     <OutDir>bin\$(Configuration)\$(Platform)</OutDir>
     <IntDir>obj\$(Configuration)\$(Platform)</IntDir>
     <TargetName>nkast.$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Program Files\Oculus\ovr_sdk_win_32.0.0\LibOVR\Include;$(IncludePath)</IncludePath>
+    <IncludePath>J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>bin\$(Configuration)\$(Platform)</OutDir>
     <IntDir>obj\$(Configuration)\$(Platform)</IntDir>
@@ -63,7 +63,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>C:\Program Files\Oculus\ovr_sdk_win_32.0.0\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>LibOVR.Native.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -86,7 +86,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>C:\Program Files\Oculus\ovr_sdk_win_32.0.0\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>"J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib";%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>LibOVR.Native.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
