--- a/src/LibOVR.Native/LibOVR.Native.vcxproj
+++ b/src/LibOVR.Native/LibOVR.Native.vcxproj
@@ -63,7 +63,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>LibOVR.Native.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
@@ -86,7 +86,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>"J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib";%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>J:\GIT\[Oculus]\OVR_Oculus_sdk_v32\LibOVR\Lib\Windows\x64\Release\VS2017\LibOVR.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>LibOVR.Native.def</ModuleDefinitionFile>
     </Link>
     <PostBuildEvent>
