--- a/src/LibOVR/LibOVR.csproj
+++ b/src/LibOVR/LibOVR.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net4.8.1</TargetFrameworks>
     <EnableDefaultItems>false</EnableDefaultItems>
     <RootNamespace>nkast.LibOVR</RootNamespace>
     <AssemblyName>nkast.LibOVR</AssemblyName>
